<resources>
    <string name="app_name">FlowerWorld</string>
    <string name="date1">17.11.2020</string>
    <string name="flower_desription">meaning of the flower </string>
    <string name="title_activity_subsidiary">SubsidiaryActivity</string>
    <string name="hello_world">Hello Square World!</string>
    <string name="img_descr">a white flower</string>
    <string name="iris">IRISES</string>
    <string name="lavender">LAVENDER</string>
    <string name="rose">ROSES</string>
    <string name="tulp">TULIPS</string>
    <string name="sunflower">SUNFLOWERS</string>
    <string name="iris_text">This sweet-smelling flower is given to others as a sign of devotion.
        The scent is calming and is also great for anyone who needs calming or stress relief.
        There is no surprise that these are a popular flower, with their unique look and therapeutic qualities.</string>
    <string name="rose_text">Red roses are Valentine\'s Day and Anniversary celebration staples due to their symbol of love and beauty.
        They\'ve symbolized such perfection since ancient times, as the Ancient Romans and Greeks associated roses with the goddesses
        of love, Venus and Aphrodite. These flowers are can also be pricey, which makes them feel even more special.</string>
    <string name="large_text">Anthericum liliago is a species of flowering plant in the family Asparagaceae.
        is native to mainland Europe (not the British Isles) and Turkey, growing in dry pastures,
        stony places and open woods and flowering in early summer. In Sweden the northernmost stable
        populations grows along the rocky shores of Lake Sommen (58В° N), albeit on occasions
        it has been found as far north as Uppland. The specific epithet liliago means lily-like or lily-carrier.
        Like many plants whose common names include "lily", it is not closely related to the true lilies.
It is a vigorous herbaceous flowering perennial with tuberous roots, 90 cm high,
        with leaves narrowly linear, 40 cm. and producing racemes of 6-10 lily-like white flowers in Spring and Summer.
Best grown in well-drained soil in a sunny position, A. liliago can be propagated by seed or by division of the rootstock every 3 to 4 years.
        It is a slow starter but forms large clumps with time. The cultivar has gained the Royal Horticultural Award of Garden Merit.</string>
    <string name="need_permission">Please give app permission to access your camera</string>
    <string name="permission_in_settings">"App can not take photo of your flower without camera( "</string>
</resources>
