<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F0F0F0">

    <LinearLayout
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#F0F0F0">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card1"
            app:cardCornerRadius="@dimen/card_corner_radius"
            android:layout_marginLeft="@dimen/medium_margin_size"
            android:layout_marginTop="@dimen/small_margin_size"
            android:layout_marginRight="@dimen/medium_margin_size"
            android:clickable="true"
            android:scaleX="1"
            android:focusable="true"
            >
            <RelativeLayout android:layout_height="match_parent"
                android:layout_width="match_parent"
                >

                <TextView
                    android:id="@+id/flowerNameTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/medium_margin_size"
                    android:layout_marginTop="@dimen/medium_margin_size"
                    android:layout_toEndOf="@+id/flowerImage1"
                    android:text="@string/iris"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="@dimen/medium_text_size"
                    />

                <TextView
                    android:id="@+id/flowerMeaningTextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/flowerNameTextView"
                    android:layout_alignParentBottom="false"
                    android:layout_marginStart="@dimen/medium_margin_size"
                    android:layout_marginTop="@dimen/small_margin_size"
                    android:layout_marginBottom="@dimen/medium_margin_size"
                    android:layout_toEndOf="@+id/flowerImage1"
                    android:text="@string/iris_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="@dimen/small_text_size"
                    android:ellipsize="end"
                    android:maxLines="2"/>

                <ImageView
                    android:id="@+id/flowerImage1"
                    android:layout_width="@dimen/card_img_size"
                    android:layout_height="@dimen/card_img_size"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/medium_margin_size"
                    android:layout_marginTop="@dimen/medium_margin_size"
                    android:layout_marginBottom="@dimen/medium_margin_size"
                    android:foregroundGravity="center_vertical"
                    app:srcCompat="@drawable/iris1"
                    android:contentDescription="@string/img_descr"
                    android:layout_gravity="center_vertical"
                    />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/card2"
            app:cardCornerRadius="@dimen/card_corner_radius"
            android:layout_marginLeft="@dimen/medium_margin_size"
            android:layout_marginTop="@dimen/small_margin_size"
            android:layout_marginRight="@dimen/medium_margin_size"
            android:clickable="true"
            android:scaleX="1"
            android:focusable="true"
            >
            <RelativeLayout android:layout_height="match_parent"
                android:layout_width="match_parent"
                >

                <TextView
                    android:id="@+id/flowerNameTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_marginStart="@dimen/medium_margin_size"
                    android:layout_marginTop="@dimen/medium_margin_size"
                    android:layout_toEndOf="@+id/flowerImage2"
                    android:text="@string/rose"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textSize="@dimen/medium_text_size"
                    />

                <TextView
                    android:id="@+id/flowerMeaningTextView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/flowerNameTextView2"
                    android:layout_alignParentBottom="false"
                    android:layout_marginStart="@dimen/medium_margin_size"
                    android:layout_marginTop="@dimen/small_margin_size"
                    android:layout_marginBottom="@dimen/medium_margin_size"
                    android:layout_toEndOf="@+id/flowerImage2"
                    android:text="@string/rose_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:ellipsize="end"
                    android:maxLines="2"
                    android:textSize="@dimen/small_text_size"
                    />

                <ImageView
                    android:id="@+id/flowerImage2"
                    android:layout_width="@dimen/card_img_size"
                    android:layout_height="@dimen/card_img_size"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:layout_marginStart="@dimen/medium_margin_size"
                    android:layout_marginTop="@dimen/medium_margin_size"
                    android:layout_marginBottom="@dimen/medium_margin_size"
                    android:foregroundGravity="center_vertical"
                    app:srcCompat="@drawable/rose"
                    android:contentDescription="@string/img_descr"
                    android:layout_gravity="center_vertical"
                    />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>


</FrameLayout>
